[package]
name = "circle_siege_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
aubio = "0.2.1"
clap = { version = "4.6.0", features = ["derive"] }
hound = "3.5.1"
itertools = "0.14.0"
rustfft = "6.4.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
symphonia = { version = "0.5.5", features = ["mp3"] }
tokio = { version = "1.52.1", features = ["rt", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = "0.29.0"
tungstenite = "0.29.0"
futures-util = "0.3.32"
ringbuf = "0.4.8"
cpal = "0.17.3"
wasapi = "0.23.0"
